intTests/test_type_errors/err031.saw
//
// Too many arguments for type constructor: Bool
//

let x : Bool Int = false;


